// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.16.0

package db

import (
	"database/sql"
	"time"

	"github.com/google/uuid"
)

type Account struct {
	ID        int64        `json:"id"`
	Owner     string       `json:"owner"`
	Balance   int64        `json:"balance"`
	Currency  string       `json:"currency"`
	CreatedAt sql.NullTime `json:"createdAt"`
}

type Entry struct {
	ID        int64 `json:"id"`
	AccountID int64 `json:"accountID"`
	// can be negative
	Amount    int64        `json:"amount"`
	CreatedAt sql.NullTime `json:"createdAt"`
}

type Session struct {
	ID           uuid.UUID    `json:"id"`
	Username     string       `json:"username"`
	RefreshToken string       `json:"refreshToken"`
	UserAgent    string       `json:"userAgent"`
	ClientIp     string       `json:"clientIp"`
	IsBlocked    bool         `json:"isBlocked"`
	CreatedAt    sql.NullTime `json:"createdAt"`
	ExpiresAt    time.Time    `json:"expiresAt"`
}

type Transfer struct {
	ID            int64        `json:"id"`
	FromAccountID int64        `json:"fromAccountID"`
	ToAccountID   int64        `json:"toAccountID"`
	CreatedAt     sql.NullTime `json:"createdAt"`
	// must be positive
	Amount int64 `json:"amount"`
}

type User struct {
	Username          string       `json:"username"`
	HashedPassword    string       `json:"hashedPassword"`
	FullName          string       `json:"fullName"`
	Email             string       `json:"email"`
	CreatedAt         sql.NullTime `json:"createdAt"`
	PasswordChangedAt time.Time    `json:"passwordChangedAt"`
}
